# library_system_api_gateway

./: README.md  pyproject.toml
.github/workflows/: test_runner.yml
deployment/dev/: Dockerfile  docker-compose.yml
deployment/prod/: Dockerfile  docker-compose.yml
deployment/prod/nginx/: nginx.conf
src/: auth.py  conf.py  exceptions.py  main.py  params.py  router_params.py
src/datastructures/: forum.py  library.py
src/dependencies/: auth.py  gateway_routers.py
src/dependencies/graphql/: request_body_builders.py  request_builders.py
src/routers/: forum.py  library.py
src/utils/: gateway_routers.py  general.py
src/utils/graphql/: request_body_builders.py
tests/: conftest.py
tests/test_gateway_router/: conftest.py  test_forum_router.py  test_library_router.py
tests/test_graphql_request_builder/: test_author_requests.py  test_book_requests.py
tests/test_views/: test_forum_views.py  test_library_views.py
