[tool.poetry]
name = "api-gateway"
version = "0.1.0"
description = ""
authors = ["ndestrieux <n.destrieux@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
fastapi = "~0.110"
pydantic-settings = "~2.2"
pyjwt = {extras = ["crypto"], version = "~2.8"}
uvicorn = {extras = ["standard"], version = "~0.29"}


[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"
pre-commit = "~3.7"
pytest = "~8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
